--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,3 +39,11 @@ path = "src/day04_1.rs"
 [[bin]]
 name = "day04_2"
 path = "src/day04_2.rs"
+
+[[bin]]
+name = "day05_1"
+path = "src/day05_1.rs"
+
+[[bin]]
+name = "day05_2"
+path = "src/day05_2.rs"
