--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,3 +47,11 @@ path = "src/day05_1.rs"
 [[bin]]
 name = "day05_2"
 path = "src/day05_2.rs"
+
+[[bin]]
+name = "day06_1"
+path = "src/day06_1.rs"
+
+[[bin]]
+name = "day06_2"
+path = "src/day06_2.rs"
