--- a/Cargo.toml
+++ b/Cargo.toml
@@ -92,3 +92,11 @@ path = "src/day10_1.rs"
 [[bin]]
 name = "day10_2"
 path = "src/day10_2.rs"
+
+[[bin]]
+name = "day11_1"
+path = "src/day11_1.rs"
+
+[[bin]]
+name = "day11_2"
+path = "src/day11_2.rs"
