--- a/Cargo.toml
+++ b/Cargo.toml
@@ -100,3 +100,11 @@ path = "src/day11_1.rs"
 [[bin]]
 name = "day11_2"
 path = "src/day11_2.rs"
+
+[[bin]]
+name = "day12_1"
+path = "src/day12_1.rs"
+
+[[bin]]
+name = "day12_2"
+path = "src/day12_2.rs"
