--- a/Cargo.toml
+++ b/Cargo.toml
@@ -108,3 +108,11 @@ path = "src/day12_1.rs"
 [[bin]]
 name = "day12_2"
 path = "src/day12_2.rs"
+
+[[bin]]
+name = "day13_1"
+path = "src/day13_1.rs"
+
+[[bin]]
+name = "day13_2"
+path = "src/day13_2.rs"
