--- a/Cargo.toml
+++ b/Cargo.toml
@@ -116,3 +116,11 @@ path = "src/day13_1.rs"
 [[bin]]
 name = "day13_2"
 path = "src/day13_2.rs"
+
+[[bin]]
+name = "day14_1"
+path = "src/day14_1.rs"
+
+[[bin]]
+name = "day14_2"
+path = "src/day14_2.rs"
