--- a/Cargo.toml
+++ b/Cargo.toml
@@ -124,3 +124,11 @@ path = "src/day14_1.rs"
 [[bin]]
 name = "day14_2"
 path = "src/day14_2.rs"
+
+[[bin]]
+name = "day15_1"
+path = "src/day15_1.rs"
+
+[[bin]]
+name = "day15_2"
+path = "src/day15_2.rs"
